--- a/src/app/components/reminder-form/reminder-form.component.scss
+++ b/src/app/components/reminder-form/reminder-form.component.scss
@@ -8,8 +8,12 @@ span.remainder-remaining {
   width: 9px;
 }
 
+.chip-content span.material-icons {
+  color: white;
+  font-size: 15px;
+}
 .pointer {
-  cursor: pointer
+  cursor: pointer;
 }
 
 .close-button {
@@ -17,5 +21,5 @@ span.remainder-remaining {
 }
 
 .btn-delete {
-  color: #de3c4b
+  color: #de3c4b;
 }
